; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_sync_mr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_iw_rdma.c_rds_iw_sync_mr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_iw_mr = type { %struct.TYPE_4__, %struct.rds_iw_device* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }
%struct.rds_iw_device = type { i32 }

@DMA_BIDIRECTIONAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rds_iw_sync_mr(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rds_iw_mr*, align 8
  %6 = alloca %struct.rds_iw_device*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.rds_iw_mr*
  store %struct.rds_iw_mr* %8, %struct.rds_iw_mr** %5, align 8
  %9 = load %struct.rds_iw_mr*, %struct.rds_iw_mr** %5, align 8
  %10 = getelementptr inbounds %struct.rds_iw_mr, %struct.rds_iw_mr* %9, i32 0, i32 1
  %11 = load %struct.rds_iw_device*, %struct.rds_iw_device** %10, align 8
  store %struct.rds_iw_device* %11, %struct.rds_iw_device** %6, align 8
  %12 = load i32, i32* %4, align 4
  switch i32 %12, label %45 [
    i32 129, label %13
    i32 128, label %29
  ]

13:                                               ; preds = %2
  %14 = load %struct.rds_iw_device*, %struct.rds_iw_device** %6, align 8
  %15 = getelementptr inbounds %struct.rds_iw_device, %struct.rds_iw_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.rds_iw_mr*, %struct.rds_iw_mr** %5, align 8
  %18 = getelementptr inbounds %struct.rds_iw_mr, %struct.rds_iw_mr* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.rds_iw_mr*, %struct.rds_iw_mr** %5, align 8
  %23 = getelementptr inbounds %struct.rds_iw_mr, %struct.rds_iw_mr* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* @DMA_BIDIRECTIONAL, align 4
  %28 = call i32 @ib_dma_sync_sg_for_cpu(i32 %16, i32 %21, i32 %26, i32 %27)
  br label %45

29:                                               ; preds = %2
  %30 = load %struct.rds_iw_device*, %struct.rds_iw_device** %6, align 8
  %31 = getelementptr inbounds %struct.rds_iw_device, %struct.rds_iw_device* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.rds_iw_mr*, %struct.rds_iw_mr** %5, align 8
  %34 = getelementptr inbounds %struct.rds_iw_mr, %struct.rds_iw_mr* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.rds_iw_mr*, %struct.rds_iw_mr** %5, align 8
  %39 = getelementptr inbounds %struct.rds_iw_mr, %struct.rds_iw_mr* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = load i32, i32* @DMA_BIDIRECTIONAL, align 4
  %44 = call i32 @ib_dma_sync_sg_for_device(i32 %32, i32 %37, i32 %42, i32 %43)
  br label %45

45:                                               ; preds = %2, %29, %13
  ret void
}

declare dso_local i32 @ib_dma_sync_sg_for_cpu(i32, i32, i32, i32) #1

declare dso_local i32 @ib_dma_sync_sg_for_device(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
